bug fix: text alignment for mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -232,13 +232,10 @@ h1 small {
   .nav--main li {
     display: flex;
     justify-content: center;
-    padding-left: 0px;
     font-size: 1em;
   }
 }
 #menu-wrapper .menu-nav {
-  padding-left: 0;
-  margin: 0;
   list-style: none;
   text-align: center;
   z-index: 30;
@@ -254,6 +251,9 @@ h1 small {
   width: 10em;
   background: #f2f2f2;
   border-top: 1px solid white;
+}
+#menu-wrapper .menu-nav a {
+  padding: 10px 40px 0 0;
 }
 #menu-wrapper .menu-nav li:hover{
   background: rgba(157, 172, 201, 1);
